--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <ul class="interests-list">
       <li >Writing — weaving emotions into prose and dialogue</li>
       <li>Cybersecurity — exploring how protection shapes innovation</li>
-      <li>Programming — especially C# & SQL, turning logic into stories</li>
+      <li>Programming — especially in Python & Django, turning logic into stories</li>
       <li>Travel - every new destination unlocks a new learning  height</li>
       <li>Learning — every challenge is a chapter</li>
     </ul>
