--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
 
 
 <!-- my code creations -->
- <!-- i only put 2, github stores the rest -->
 <section id="projects" class="projects">
   <h2 class="section-heading">Projects</h2>
 
@@ -149,6 +148,16 @@
         <p>Designed a comprehensive system for managing inventory and sales data for an online store.</p>
       </div>
     </div>
+   <div class="project-card">
+    <img src="healing-atlas.png" alt="Healing Atlas Platform">
+    <div class="project-info">
+      <h4>Healing Atlas </h4>
+      <p>A survivor-centered platform designed as a digital sanctuary for reflection, storytelling, and emotional recovery. Built with Django and poetic intent, it offers users a space to navigate trauma, reclaim voice, and find community.</p>
+      <p><strong>Tech Stack:</strong> Django, HTML/CSS, JavaScript</p>
+      <p><a href="https://healingatlas.onrender.com/" target="_blank">Explore Healing Atlas</a></p>
+  </div>
+</div>
+
 
   </div>
 </section>
@@ -176,21 +185,6 @@
 
     <button type="submit" class="contact-btn">Send Message</button>
   </form>
-  <div class="contact-map">
- <div class="contact-map">
-  <iframe
-    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3988.8154532071917!2d36.80649807569843!3d-1.2920650356109584!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f10dbe6b4a7ad%3A0x5aa41e95c01d49e2!2sNairobi!5e0!3m2!1sen!2ske!4v1691485250400!5m2!1sen!2ske"
-    width="100%"
-    height="300"
-    style="border:0;"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
-</div>
-
-</div>
-
 
   <ul class="contact-details">
     <li><i class="fa-solid fa-location-dot"></i> 00100, Nairobi, Kenya</li>
