--- a/index.html
+++ b/index.html
@@ -206,6 +206,11 @@
     </ul>
   </div>
 </footer>
-
+<script>
+    window.addEventListener('scroll', function() {
+  const header = document.querySelector('header');
+  header.classList.toggle('scrolled', window.scrollY > 50);
+});
+</script>
 </body>
 </html>
