--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     <h4 class="text-xl font-bold text-white">BSc. Applied Computing</h4>
                     <p class="text-accent text-sm font-bold mt-1">KCA University</p>
                     <p class="text-xs text-gray-500 mb-4 font-bold uppercase tracking-wider">Ongoing</p>
-                    <p class="text-sm text-gray-400">Bachelor of Science in Computer Science (Applied Computing). Focusing on core algorithms, system architecture, software engineering principles, and developing a strong foundation in **various programming languages and web development**.</p>
+                    <p class="text-sm text-gray-400">Bachelor of Science in Computer Science (Applied Computing). Focusing on core algorithms, system architecture, software engineering principles, and developing a strong foundation in various programming languages and web development.</p>
                 </div>
 
                 <div class="p-8 bg-card border border-white/5 rounded-xl hover:border-accent/50 transition-colors">
@@ -499,7 +499,7 @@
     </section>
 
     <footer class="py-8 text-center text-xs text-gray-600 border-t border-white/5">
-        <p>© 2025 Florence Ndinda. Designed & Built in Nairobi.</p>
+        <p>© 2025 Florence Ndinda.</p>
     </footer>
 
     <script>
