--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">Django</span>
                             <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">PostgreSQL</span>
                         </div>
-                        <a href="https://healingatlas.onrender.com/" target="_blank" class="block w-full text-center py-2 bg-white/5 hover:bg-white/10 text-xs font-bold uppercase tracking-widest text-white transition-colors rounded">View Demo</a>
+                        <a href="https://healing-atlas.onrender.com/" target="_blank" class="block w-full text-center py-2 bg-white/5 hover:bg-white/10 text-xs font-bold uppercase tracking-widest text-white transition-colors rounded">View Demo</a>
                     </div>
                 </div>
 
