--- a/index.html
+++ b/index.html
@@ -373,27 +373,44 @@
         </div>
     </section>
 
-   <section id="projects" class="py-24 px-6 bg-[#0f0f0f]">
+ <section id="projects" class="py-24 px-6 bg-[#0f0f0f]">
     <div class="max-w-7xl mx-auto">
         <h2 class="text-sm font-bold text-accent uppercase tracking-widest mb-2">04 / Projects</h2>
         <h3 class="text-4xl font-tech font-bold text-white mb-12">Featured Works</h3>
 
-            <div class="grid md:grid-cols-3 gap-8">
-                <div class="group bg-dark border border-white/5 hover:border-accent/50 transition-colors rounded-xl overflow-hidden">
-                    <div class="h-48 overflow-hidden relative">
-                        <img src="healingatlas.png" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100" alt="Healing Atlas">
-                        <div class="absolute top-4 right-4 bg-accent text-white text-[10px] font-bold px-2 py-1 rounded uppercase">Live</div>
-                    </div>
-                    <div class="p-6">
-                        <h4 class="text-xl font-bold text-white mb-2">Healing Atlas</h4>
-                        <p class="text-gray-400 text-sm mb-4 line-clamp-2">A survivor-centered digital sanctuary designed for reflection and emotional recovery using Django.</p>
-                        <div class="flex flex-wrap gap-2 mb-6">
-                            <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">Django</span>
-                            <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">PostgreSQL</span>
-                        </div>
-                        <a href="https://healingatlas.onrender.com/" target="_blank" class="block w-full text-center py-2 bg-white/5 hover:bg-white/10 text-xs font-bold uppercase tracking-widest text-white transition-colors rounded">View Demo</a>
-                    </div>
+        <div class="grid md:grid-cols-3 gap-8">
+            <div class="group bg-dark border border-white/5 hover:border-accent/50 transition-colors rounded-xl overflow-hidden">
+                <div class="h-48 overflow-hidden relative">
+                    <img src="images/taxlaw.png" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100" alt="Kenya Tax Law">
+                    <div class="absolute top-4 right-4 bg-accent text-white text-[10px] font-bold px-2 py-1 rounded uppercase">Professional / Live</div>
                 </div>
+                <div class="p-6">
+                    <h4 class="text-xl font-bold text-white mb-2">Kenya Tax Law Portal</h4>
+                    <p class="text-gray-400 text-sm mb-4 line-clamp-2">A professional legal portfolio and resource hub for a Tax Policy Consultant. Optimized for SEO and secure global access.</p>
+                    <div class="flex flex-wrap gap-2 mb-6">
+                        <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">Custom DNS</span>
+                        <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">HTTPS/TLS</span>
+                        <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">SEO</span>
+                    </div>
+                    <a href="https://kenyataxlaw.com" target="_blank" class="block w-full text-center py-2 bg-white/5 hover:bg-white/10 text-xs font-bold uppercase tracking-widest text-white transition-colors rounded">Visit Live Site</a>
+                </div>
+            </div>
+
+            <div class="group bg-dark border border-white/5 hover:border-accent/50 transition-colors rounded-xl overflow-hidden">
+                <div class="h-48 overflow-hidden relative">
+                    <img src="images/healingatlas.png" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100" alt="Healing Atlas">
+                    <div class="absolute top-4 right-4 bg-accent text-white text-[10px] font-bold px-2 py-1 rounded uppercase">Live</div>
+                </div>
+                <div class="p-6">
+                    <h4 class="text-xl font-bold text-white mb-2">Healing Atlas</h4>
+                    <p class="text-gray-400 text-sm mb-4 line-clamp-2">A survivor-centered digital sanctuary designed for reflection and emotional recovery using Django.</p>
+                    <div class="flex flex-wrap gap-2 mb-6">
+                        <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">Django</span>
+                        <span class="text-[10px] uppercase font-bold text-gray-500 border border-white/10 px-2 py-1 rounded">PostgreSQL</span>
+                    </div>
+                    <a href="https://healingatlas.onrender.com/" target="_blank" class="block w-full text-center py-2 bg-white/5 hover:bg-white/10 text-xs font-bold uppercase tracking-widest text-white transition-colors rounded">View Demo</a>
+                </div>
+            </div>
 
             <div class="group bg-dark border border-white/5 hover:border-accent/50 transition-colors rounded-xl overflow-hidden">
                 <div class="h-48 overflow-hidden relative">
