gasgo added to the projects grid and updated cv

--- a/index.html
+++ b/index.html
@@ -396,6 +396,39 @@
                 </div>
             </div>
 
+            <div class="group bg-dark border border-accent/30 hover:border-accent transition-colors rounded-xl overflow-hidden shadow-[0_0_20px_rgba(255,51,51,0.1)]">
+    <div class="h-48 overflow-hidden relative">
+        <img src="images/gasgo_dashboard.png" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100" alt="GasGo Dashboard">
+        <div class="absolute top-4 left-4 bg-yellow-500 text-black text-[10px] font-black px-3 py-1 rounded-full uppercase tracking-tighter shadow-lg">
+            <i class="fa-solid fa-trophy mr-1"></i> 3rd Place / Hackathon Winner
+        </div>
+        <div class="absolute top-4 right-4 bg-accent text-white text-[10px] font-bold px-2 py-1 rounded uppercase">Live Demo</div>
+    </div>
+    <div class="p-6">
+        <div class="flex justify-between items-start mb-2">
+            <h4 class="text-xl font-bold text-white">GasGo Smart Utility</h4>
+            <span class="text-xs font-code text-accent">v1.0</span>
+        </div>
+        <p class="text-gray-400 text-sm mb-4">An intelligent LPG management platform featuring <strong>Predictive Burn Rate</strong> algorithms and <strong>Cylinder Trust™</strong> verification. Developed and deployed in under 48 hours.</p>
+        
+        <div class="flex flex-wrap gap-2 mb-6">
+            <span class="text-[10px] uppercase font-bold text-gray-400 border border-white/10 px-2 py-1 rounded">Django</span>
+            <span class="text-[10px] uppercase font-bold text-gray-400 border border-white/10 px-2 py-1 rounded">Chart.js</span>
+            <span class="text-[10px] uppercase font-bold text-gray-400 border border-white/10 px-2 py-1 rounded">PostgreSQL</span>
+            <span class="text-[10px] uppercase font-bold text-gray-400 border border-white/10 px-2 py-1 rounded">Render</span>
+        </div>
+
+        <div class="grid grid-cols-2 gap-3">
+            <a href="https://gasgo-uby8.onrender.com/" target="_blank" class="text-center py-2 bg-accent text-white text-xs font-bold uppercase tracking-widest transition-colors rounded hover:bg-red-600">
+                Launch App
+            </a>
+            <a href="https://github.com/Flora72/Gasgo" target="_blank" class="text-center py-2 bg-white/5 text-gray-300 text-xs font-bold uppercase tracking-widest transition-colors rounded border border-white/10 hover:bg-white/10">
+                View Code
+            </a>
+        </div>
+    </div>
+</div>
+
             <div class="group bg-dark border border-white/5 hover:border-accent/50 transition-colors rounded-xl overflow-hidden">
                 <div class="h-48 overflow-hidden relative">
                     <img src="images/healingatlas.png" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100" alt="Healing Atlas">
