--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     <div class="h-48 overflow-hidden relative">
         <img src="images/gasgo_dashboard.png" class="w-full h-full object-cover group-hover:scale-105 transition-transform duration-500 opacity-80 group-hover:opacity-100" alt="GasGo Dashboard">
         <div class="absolute top-4 left-4 bg-yellow-500 text-black text-[10px] font-black px-3 py-1 rounded-full uppercase tracking-tighter shadow-lg">
-            <i class="fa-solid fa-trophy mr-1"></i> 3rd Place / Hackathon Winner
+            <i class="fa-solid fa-trophy mr-1"></i> 3rd Place Hackathon Winner
         </div>
         <div class="absolute top-4 right-4 bg-accent text-white text-[10px] font-bold px-2 py-1 rounded uppercase">Live Demo</div>
     </div>
@@ -409,8 +409,7 @@
             <h4 class="text-xl font-bold text-white">GasGo Smart Utility</h4>
             <span class="text-xs font-code text-accent">v1.0</span>
         </div>
-        <p class="text-gray-400 text-sm mb-4">An intelligent LPG management platform featuring <strong>Predictive Burn Rate</strong> algorithms and <strong>Cylinder Trust™</strong> verification. Developed and deployed in under 48 hours.</p>
-        
+        <p class="text-gray-400 text-sm mb-4"> GasGo is a smart LPG access and delivery platform that connects households, vendors, and riders through a centralized system. It was born out of a personal frustration shared by many households in Kenya: the struggle to find safe, reliable cooking gas</p>
         <div class="flex flex-wrap gap-2 mb-6">
             <span class="text-[10px] uppercase font-bold text-gray-400 border border-white/10 px-2 py-1 rounded">Django</span>
             <span class="text-[10px] uppercase font-bold text-gray-400 border border-white/10 px-2 py-1 rounded">Chart.js</span>
